--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "private": false,
   "scripts": {
-    "test": "jest --coverage",
+    "test": "tsc && jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "tsc && cp package.json README.md ./app",
     "doc": "typedoc --options typedoc.json"
