--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "tsc && jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "tsc && cp package.json README.md ./app",
-    "doc": "typedoc --options typedoc.json"
+    "doc": "typedoc --options typedoc.json",
+    "deploy-doc": "./deploy-doc.sh"
   },
   "peerDependencies": {
     "typescript": "^3.5"
