--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "docs": "https://github.com/FilipeBeck/ts-infer",
   "private": false,
   "scripts": {
+    "clear": "rm -rf ./app",
     "test": "tsc && jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "build": "tsc && cp package.json README.md ./app",
+    "build": "yarn clear && tsc && cp package.json README.md ./app",
     "doc": "typedoc --options typedoc.json",
     "deploy-doc": "./deploy-doc.sh"
   },
