--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "private": false,
   "scripts": {
     "clear": "rm -rf ./app",
-    "test": "tsc && jest --coverage",
+    "test": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "yarn clear && tsc && cp package.json README.md ./app",
     "doc": "typedoc --options typedoc.json",
@@ -26,15 +26,14 @@
     "typescript": "^3.5"
   },
   "devDependencies": {
+    "@filipe.beck/typescript-x": "^3.9.1",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
     "@types/rewire": "^2.5.28",
     "coveralls": "^3.0.4",
     "jest": "^24.8.0",
-    "rewire": "^4.0.1",
     "ts-jest": "^24.0.2",
-    "typedoc": "^0.16.9",
-    "typescript": "^3.8.0-beta"
+    "typedoc": "^0.16.9"
   },
   "dependencies": {
     "get-tsconfig": "^1.0.1",
